Updated vodafone case study.

--- a/stevandow/vodafone.html
+++ b/stevandow/vodafone.html
@@ -33,7 +33,7 @@
 		</header> -->
 
 		<main role="main">
-			<div id="intro-wrap" data-height="33.333" style="background-color:#ffffff;">
+			<div id="intro-wrap" data-height="11.333" style="background-color:#ffffff;" class="buffer-bottom">
 				<div id="intro">
                     <div class="caption">
                         <img src=img/vodafone-logo.jpg class="case-study">
@@ -70,10 +70,10 @@
                         <h1>The challenge</h1>
                         <p>I was asked to help further develop their existing iOS app. They asked me to create a user-friendly, reliable, secure and professional iOS app.</p>
                     </div>
-                    <div class="buffer-bottom">
+                    <!-- <div class="buffer-bottom">
                         <h1>Research &amp; Competitive Analysis</h1>
                         <p>There were similar services out there such as Automatic, giveo2, and Mavia. We did a competitive analysis, researched their pros and cons and tried to understand their business model to see how they compared to Vodafone's DriveXone concept.</p>
-                    </div>
+                    </div> -->
                     <div class="buffer-bottom">
                         <h1>Tools used</h1>
                         <ul>
