Updated old case studies

--- a/stevandow/kijk.html
+++ b/stevandow/kijk.html
@@ -28,62 +28,55 @@
 				<div class="nav-inner row-content buffer-left buffer-right even clear-after">
 					<div id="brand">
 						<a href="index.html"><img src="img/van-dow-logo-s-blk.png" alt=""></a>
-					</div><!-- brand -->
-				</div><!-- row-content -->	
-			</div><!-- row -->	
+					</div>
+				</div>	
+			</div>	
 		</header> -->
 
 		<main role="main">
-			<div id="intro-wrap" data-height="10" class="buffer-bottom">
+			<!-- <div id="intro-wrap" data-height="20">
 				<div id="intro" class="preload darken" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fade">
                     <div class="caption">
                         <img src=img/kijk-logo.jpg class="case-study">
-                    </div><!-- caption -->
-				</div><!-- intro -->				
-			</div><!-- intro-wrap -->
+                    </div>
+				</div>				
+			</div> -->
 
 			<div id="main" class="row">
 				<div class="row-content buffer-left buffer-right buffer-bottom clear-after">
-                    
+                    <img src=img/kijk-logo.jpg class="case-study buffer-top">
+
                     <div class="post-area buffer-bottom clear-after buffer-top">
                             <div class="column last">
                                 <div class="widget">
                                     <h4>Client</h4>
                                     <p>SBS Broadcasting</p>
                                     <h4>Role</h4>
-                                    <p>Senior UI</p>
-                                    <h4>Methods</h4>
-                                    <p>Design sprints, wireframing, design thinking, concept development, concept sketching,</p>
+                                    <p>Senior UI Designer</p>
+                                    <h4>Deliverables</h4>
+                                    <p>UI designs, wireframes, Design System, Iconography,</p>
                                 </div>
                             </div>
                     </div><!-- post-area-->
 
 
                     <div class="buffer-bottom">
-                        <h1>Solutions</h1>
+                        <h1>Goal</h1>
                         <p>We undertook a complete responsive redesign with an updated brand, and a customer-centric experience. We created a new IA with content strategy, and updated interaction models.</p>
                     </div>
-                    <div class="buffer-bottom column six">
-                        <h1>About the project</h1>
-                        <p>KIJK is a Dutch ad-supported streaming service offering a selection of TV shows, clips, and movies on kijk.nl. KIJK subscribers can access episodes from SBS6, Veronica, Net5, and SBS9 KIJK offers a monthly subscription fee service available on computers and laptops, smartphones, tablets, TVs, and other devices.</p>
-                            <a href="http://www.kijk.nl" class="button transparent">Visit Website</a>
-                    </div>
-                    <div class="buffer-bottom column six last">
-                        <h1>My role</h1>
-                        <p>I was responsible for doing competitive research and analysis of similar services, branding, UX design, visual design and art direction for the responsive website. I colaberated together with a Visual Designer and Interaction Designer from unitid. They were responsible for designing the iPad and iPhone app.</p>
-                    </div>
+                    
                     <div class="buffer-bottom">
-                        <h1>The challenge</h1>
-                        <p>I was hired to rethink the existing online service from KIJK and develop a new brand experience for their responisve website.</p>
-                        <h3>Old KIJK website</h3>
+                        <h1>Overview</h1>
+                        <p>The existing website had a low user adoption and an outdated user experience. We undertook a complete responsive redesign with an updated brand and a customer-centric experience. We created a new IA with content strategy and updated interaction models.</p>
+                    </div>
+
+                        <div class="buffer-bottom">
+                            <h3>Old KIJK website</h3>
+                        </div>
                         <figure>
                             <div><img src="img/kijk/kijk-1.png" alt=""></div>
                         </figure>
-                    </div>
-                    <!-- <div class="buffer-bottom">
-                        <h1>Research &amp; Competitive Analysis</h1>
-                        <p>There were similar services out there such as Videoland, Pathe and NPO. I signed up for every service to research their user flows, to understand their business model and see how they compared to  the concept of KIJK.</p>
-                    </div> -->
+
                     <div class="buffer-top buffer-bottom">
                         <h1>Style tile</h1>
                         <p>I created a couple of style tiles and an option of fonts together with the Visual Designer. This was done to give the stakeholders an idea of which direction we could go.</p>
@@ -119,7 +112,7 @@
                     </div>
                     <div class="gallery slider buffer-top buffer-bottom">
                         <h1>User Interface</h1>
-                        <p>We created a GUI kit so that it was easier to mockup all the screens that we needed. This also helped speed up the process and keep design consistent.</p>
+                        <p>We created a Design System so that it was easier to mockup all the screens that we needed. This also helped speed up the process and keep design consistent.</p>
                         <figure>
                             <div><img src="img/kijk/kijk-7.jpg" alt=""></div>
                         </figure>
@@ -132,7 +125,7 @@
                     </div>
                     <div class="buffer-top buffer-bottom">
                         <h1>The results</h1>
-                        <p>+200 pages online, a brand new design that is simple engaging, and last but not least, a satisfied customer!</p>
+                        <p>+200 pages online, a brand new design that is simple, engaging, and last but not least, a satisfied customer!</p>
                         <figure class="buffer-top">
                             <div><img src="img/kijk/kijk-10.jpg" alt=""></div>
                         </figure>
