--- a/stevandow/srxp.html
+++ b/stevandow/srxp.html
@@ -22,28 +22,29 @@
 
 	<body class="single single-portfolio">
 
-		<header role="banner" class="transparent light">
+		<!-- <header role="banner" class="transparent light">
 			<div class="row">
 				<div class="nav-inner row-content buffer-left buffer-right even clear-after">
 					<div id="brand">
 						<a href="index.html"><img src="img/van-dow-logo-s.png" alt=""></a>
-					</div><!-- brand -->
-				</div><!-- row-content -->	
-			</div><!-- row -->	
-		</header>
+					</div>
+				</div>	
+			</div>	
+		</header> -->
 
 		<main role="main">
-			<div id="intro-wrap" data-height="33.333" style="background-color:#0089c3;">
+			<!-- <div id="intro-wrap" data-height="33.333" style="background-color:#0089c3;">
 				<div id="intro">
                     <div class="caption">
                         <img src=img/srxp-logo.png class="case-study">
-                    </div><!-- caption -->
-				</div><!-- intro -->				
-			</div><!-- intro-wrap -->
+                    </div>
+				</div>				
+			</div> -->
 
 			<div id="main" class="row">
 				<div class="row-content buffer-left buffer-right buffer-bottom clear-after">
-                    
+                    <img src=img/srxp-logo.png class="case-study">
+
                     <div class="post-area buffer-bottom clear-after">
                             <div class="column last">
                                 <div class="widget">
