--- a/stevandow/vodafone.html
+++ b/stevandow/vodafone.html
@@ -27,54 +27,55 @@
 				<div class="nav-inner row-content buffer-left buffer-right even clear-after">
 					<div id="brand">
 						<a href="index.html"><img src="img/van-dow-logo-s-blk.png" alt=""></a>
-					</div><!-- brand -->
-				</div><!-- row-content -->	
-			</div><!-- row -->	
+					</div>
+				</div>	
+			</div>	
 		</header> -->
 
 		<main role="main">
-			<div id="intro-wrap" data-height="10" style="background-color:#ffffff;" class="buffer-bottom">
+			<!-- <div id="intro-wrap" data-height="10" style="background-color:#ffffff;" class="buffer-bottom">
 				<div id="intro">
                     <div class="caption">
                         <img src=img/vodafone-logo.jpg class="case-study">
-                    </div><!-- caption -->
-				</div><!-- intro -->				
-			</div><!-- intro-wrap -->
+                    </div>
+				</div>		
+			</div> -->
 
 			<div id="main" class="row">
 				<div class="row-content buffer-left buffer-top buffer-right buffer-bottom clear-after">
-                    
+                    <img src=img/vodafone-logo.jpg class="case-study">
+
                     <div class="post-area buffer-bottom clear-after">
                             <div class="column last">
                                 <div class="widget">
                                     <h4>Client</h4>
                                     <p>Vodafone</p>
                                     <h4>Role in Project</h4>
-                                    <p>UI Designer, Visual Design and Art Direction</p>
-                                    <h4>Methods</h4>
-                                    <p>Concept development, concept sketching, rapid prototyping and design thinking</p>
+                                    <p>Lead Visual Designer</p>
+                                    <h4>Deliverables</h4>
+                                    <p>UI design, Wireframes, Design system, iconography</p>
                                 </div>
                             </div>
-                    </div><!-- post-area-->
+                    </div>
 
 
                     <div class="buffer-bottom column six">
-                        <h1>About the project</h1>
-                        <p>I was asked to help further develop a concept for Vodafone’s brand new XONE beta product drivexone. The mission was to (re)design the UX and UI of the existing Vodafone b2b app for iOS and Android. The agile scrum methodology was used and a small team of developers and testers got assigned to the project. I worked together with the team at the Vodafone campus in Dusseldorf.</p>
+                        <h1>Goal</h1>
+                        <p>Redesign the UI of Vodafone’s brand new XONE beta product drivexone.</p>
                     </div>
                     <div class="buffer-bottom column six last">
-                        <h1>My role</h1>
-                        <p>I was responsible for gathering the project’s requirements, competitive research and analysis of similar services, designing the architecture of the iOS app, wire framing, prototyping and creating final documentation for development.</p>
+                        <h1>Overview</h1>
+                        <p>We undertook a complete redesign of the native iOS and Android app. We updated the UI, created a new IA, and designed a fun and playful experience by implementing gamification.</p>
                     </div>
                     <div class="buffer-bottom">
-                        <h1>The challenge</h1>
-                        <p>I was asked to help further develop their existing iOS app. They asked me to create a user-friendly, reliable, secure and professional iOS app.</p>
+                        <h1>Result</h1>
+                        <p>I Art Directed the badge designs which was part of the gamification. Vodafone global branding design team liked the art direction and used it as a foundation for future Vodafone global branding.</p>
                     </div>
                     <!-- <div class="buffer-bottom">
                         <h1>Research &amp; Competitive Analysis</h1>
                         <p>There were similar services out there such as Automatic, giveo2, and Mavia. We did a competitive analysis, researched their pros and cons and tried to understand their business model to see how they compared to Vodafone's DriveXone concept.</p>
                     </div> -->
-                    <div class="buffer-bottom">
+                    <!-- <div class="buffer-bottom">
                         <h1>Tools used</h1>
                         <ul>
                         	<li>Paper and pen</li>
@@ -84,7 +85,7 @@
                         	<li>Illustrator</li>
 
                         </ul>
-                    </div>
+                    </div> -->
                     <div>
                         <h1>Sketching</h1>
                         <p>You will be able to recognise me by my big yellow ZAP BOOK. This is my trusted old friend and I don't leave the house without it. I always start sketching my ideas on paper, it's faster and easier to find the right look and feel. I start with thumbnails to find the right flow and layout. And from there on I sketch everything on A3 paper.</p>
@@ -104,7 +105,7 @@
                     </div>
                     <div class="buffer-bottom buffer-top">
                         <h1>Icon &amp; badge designs</h1>
-                        <p>I was in charge of the Art Direction and I came up with the style for the badges and icons. The global branding design team in Madrid liked the style so much that they used it as a foundation for future Vodafone global branding.</p>
+                        <p>I was in charge of the Art Direction and came up with the style for the badges and icons.</p>
                         <figure>
                             <div class="buffer-top"><img src="img/vodafone/vodafone_2.png" alt="image"></div>
                         </figure>
