Added published work cards.

--- a/what.html
+++ b/what.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en" data-theme="light">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-178334981-1"></script>
@@ -21,7 +23,7 @@ gtag("config", "UA-178334981-1");</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <title>About me.</title>
+  <title>Steven Dow - Product Designer</title>
   <link rel="stylesheet" href="main.48b3db1d.css">
   <script src="main.48b3db1d.js"></script>
 </head>
@@ -76,12 +78,6 @@ gtag("config", "UA-178334981-1");</script>
           </div>
           <div class="row font-weight-light">
             <div class="col-md-6 col-lg-4 col-xl-4">
-              <!-- <div class="pb-3">
-              <h4>Soft skills.</h4>
-                <p>
-                  Empathic, creative, active listener, autodidact, fast learner, great collaborator, good communicator, hands-on, highly detailed and structured, highly adaptable, humour, problem solver, self-motivated, stakholder management, authentic, strategic thinking.
-                </p>
-              </div> -->
               <div class="pb-3">
               <h4>Discovery.</h4>
                 <p>
@@ -109,13 +105,6 @@ gtag("config", "UA-178334981-1");</script>
               </p>
             </div>
           </div>
-          <!-- <div class="col-md-6 col-lg-4 col-xl-4">
-              <picture>
-                <source srcset="/hero-img-1.bc93ae3a.webp" type="image/webp">
-                <source srcset="/hero-img-1.790bbb37.jpg" type="image/jpeg"> 
-                <img src="hero-img-1.790bbb37.jpg" alt="Illustration of Steven Dow" class="img-fluid">
-              </picture>
-            </div> -->
           </div>
         </div>
     </section>
