--- a/work.html
+++ b/work.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en" data-theme="light">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-178334981-1"></script>
@@ -66,35 +68,60 @@ gtag("config", "UA-178334981-1");</script>
     </header>
     <!-- Hero section end --> 
     <main>      
-    <!-- portfolio -->
-  <section class="py-5">
-    <div class="container">
-        <p class="lead">Case studies.</p>
-        <h1 class="pb-3">Under<br>NDA<span class="text-blue">.</span></h1>
-        <button type="button" class="btn btn-primary" href="mailto:hello@wodnevets.com?subject=Nice%20website&body=Hi%20Steven,%20Let's%20grab%20an%20online%20coffee.">Request access</button>
-        <div class="pt-4">
-          <h2 class="pb-3">Published work</h2>
-          <ul>
-            <li>
-              <a href="https://www.panion.org/" target="blank">Panion</a>
-              <span class="sr-only">Opens in new window</span>
-            </li>
-            <li>
-              <a href="https://www.standardbank.co.za/southafrica/personal/products-and-services/borrow-for-your-needs/personal-loans/our-loans" target="blank">Standardbank</a>
-              <span class="sr-only">Opens in new window</span>
-            </li>
-            <li>
-              <a href="https://www.arla.com/company/news-and-press/latest-news/" target="blank">Arla</a>
-            </li>
-            <li>
-              <a href="https://apps.apple.com/us/app/srxp/id428497784" target="blank">SRXP</a>
-              <span class="sr-only">Opens in new window</span>
-            </li>
-          </ul>
-  
+    <!-- Case studies -->
+    <section class="py-5">
+      <div class="container">
+        <div class="row pb-5">
+          <div class="col">
+            <p class="lead">Case studies.</p>
+            <h1 class="pb-3">Under<br>NDA<span class="text-blue">.</span></h1>
+            <a href="mailto:hello@wodnevets.com?subject=Nice%20website&body=Hi%20Steven,%20Let's%20grab%20an%20online%20coffee." class="btn btn-primary" role="button">Request access</a>
+          </div>
         </div>
-    </div>
-  </section>
+        <h2 class="mb-4">Published work.</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4 font-weight-light">
+          <div class="col mb-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Panion</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Product design</h6>
+                <p class="card-text"></p>
+                <a href="https://www.panion.org/" target="blank" class="card-link">View now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Standardbank</h5>
+                <h6 class="card-subtitle mb-2 text-muted">UI design / end development</h6>
+                <p class="card-text"></p>
+                <a href="https://www.standardbank.co.za/southafrica/personal/products-and-services/borrow-for-your-needs/personal-loans/our-loans" class="card-link">View now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Arla</h5>
+              <h6 class="card-subtitle mb-2 text-muted">UI design / front end development</h6>
+              <p class="card-text"></p>
+              <a href="https://www.arla.com/company/news-and-press/latest-news/" class="card-link" target="blank">View now</a><span class="sr-only">Opens in new window</span>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+            <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">SRXP</h5>
+              <h6 class="card-subtitle mb-2 text-muted">UX design</h6>
+              <p class="card-text"></p>
+              <a href="https://apps.apple.com/us/app/srxp/id428497784" class="card-link" target="blank">View now</a><span class="sr-only">Opens in new window</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
       <!-- Back to top -->
       <button id="back-to-top" href="#" class="back-to-top" type="button">
